unpackaged/main/default/objects/Product2/fields/Initial_Inventory__c.field-meta.xml
<CustomField>
        <fullName>Initial_Inventory__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Initial Inventory</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>