unpackaged/main/default/objects/Product2/fields/Quantity_Ordered__c.field-meta.xml
<CustomField>
        <fullName>Quantity_Ordered__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantity Ordered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>