unpackaged/main/default/objects/Product2/fields/Quantity_Remaining__c.field-meta.xml
<CustomField>
        <fullName>Quantity_Remaining__c</fullName>
        <formula>Initial_Inventory__c - Quantity_Ordered__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quantity Remaining</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>